--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@radix-ui/react-accordion": "^1.2.11",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
     "next": "15.3.5",
     "react": "^19.0.0",
