--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
@@ -23,10 +24,9 @@
     "react-hook-form": "^7.65.0",
     "react-responsive": "^10.0.1",
     "tailwind-merge": "^3.3.1",
-    "zod": "link:@hookform/resolvers/zod"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "latest",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
