--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.13",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
     "next": "15.3.5",
